--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <link rel="icon" href="./icon.png" />
+    <title>NOVA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
