Fixed navbar to be fixed Added team component Moved out button styling to parent

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="./icon.png" />
     <title>NOVA</title>
   </head>
-  <body>
+  <body style="background: #121c24;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
